--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 2.6)
 project(GBAc)
 set(CMAKE_C_FLAGS_DEBUG "-g -Wall -Wextra")
-file(GLOB SOURCES src/*.c)
+file(GLOB SOURCES src/*.c third-party/linenoise/linenoise.c)
+include_directories(${CMAKE_SOURCE_DIR}/third-party/linenoise)
 add_executable(gbac ${SOURCES})
