--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,12 @@
 cmake_minimum_required(VERSION 2.6)
 project(GBAc)
 set(CMAKE_C_FLAGS_DEBUG "-g -Wall -Wextra")
-file(GLOB SOURCES src/*.c third-party/linenoise/linenoise.c)
+file(GLOB ARM_SRC ${CMAKE_SOURCE_DIR}/src/arm/*.c)
+file(GLOB GBA_SRC ${CMAKE_SOURCE_DIR}/src/gba/*.c)
+file(GLOB DEBUGGER_SRC ${CMAKE_SOURCE_DIR}/src/debugger/*.c)
+file(GLOB THIRD_PARTY ${CMAKE_SOURCE_DIR}/third-party/linenoise/linenoise.c)
+include_directories(${CMAKE_SOURCE_DIR}/src/arm)
+include_directories(${CMAKE_SOURCE_DIR}/src/gba)
+include_directories(${CMAKE_SOURCE_DIR}/src/debugger)
 include_directories(${CMAKE_SOURCE_DIR}/third-party/linenoise)
-add_executable(gbac ${SOURCES})
+add_executable(gbac ${ARM_SRC} ${GBA_SRC} ${DEBUGGER_SRC} ${THIRD_PARTY} ${CMAKE_SOURCE_DIR}/src/main.c)
