--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ if(BUILD_RASPI AND BUILD_EGL)
 	set(OPENGL_INCLUDE_DIR "")
 	add_definitions(-DBUILD_RASPI)
 elseif(BUILD_BBB OR BUILD_RASPI)
+	add_definitions(-DCOLOR_16_BIT -DCOLOR_5_6_5)
 	set(MAIN_SRC ${CMAKE_SOURCE_DIR}/src/sdl-main.c)
 else()
 	set(MAIN_SRC ${CMAKE_SOURCE_DIR}/src/gl-main.c)
