--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,8 +17,10 @@ include_directories(${CMAKE_SOURCE_DIR}/src/util)
 find_package(SDL 1.2 REQUIRED)
 file(GLOB PLATFORM_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/sdl-*.c)
 if(WIN32)
+	add_definitions(-D_WIN32_WINNT=0x0600)
 	file(GLOB OS_SRC ${CMAKE_SOURCE_DIR}/src/platform/windows/*.c)
 else()
+	add_definitions(-DUSE_PTHREADS)
 	file(GLOB OS_SRC ${CMAKE_SOURCE_DIR}/src/platform/posix/*.c)
 endif()
 include_directories(${CMAKE_SOURCE_DIR}/src/platform/sdl)
