--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,9 @@ endif()
 
 if(BUILD_PERF)
 	set(MAIN_SRC ${CMAKE_SOURCE_DIR}/src/platform/perf-main.c)
-	set(EXTRA_LIB ${EXTRA_LIB} rt)
+	if(UNIX AND NOT APPLE)
+		set(EXTRA_LIB ${EXTRA_LIB} rt)
+	endif()
 endif()
 
 add_executable(${BINARY_NAME} WIN32 ${ARM_SRC} ${GBA_SRC} ${DEBUGGER_SRC} ${RENDERER_SRC} ${UTIL_SRC} ${PLATFORM_SRC} ${OS_SRC} ${MAIN_SRC})
