--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ set(BINARY_NAME gbac CACHE INTERNAL "Name of output binaries")
 set(CMAKE_C_FLAGS_DEBUG "-g -Wall -Wextra -Wno-error=type-limits --std=gnu99")
 set(CMAKE_C_FLAGS_RELEASE "-O3 -Wall -Wextra --std=gnu99")
 set(USE_DEBUGGER ON CACHE BOOL "Whether or not to enable the ARM debugger")
+set(BUILD_QT ON CACHE BOOL "Build Qt frontend")
 set(EXTRA_LIB "")
 file(GLOB ARM_SRC ${CMAKE_SOURCE_DIR}/src/arm/*.c)
 file(GLOB GBA_SRC ${CMAKE_SOURCE_DIR}/src/gba/*.c)
@@ -67,3 +68,7 @@ target_link_libraries(${BINARY_NAME} m ${DEBUGGER_LIB} ${PLATFORM_LIBRARY} ${OPE
 add_executable(${BINARY_NAME}-bin WIN32 ${MAIN_SRC})
 target_link_libraries(${BINARY_NAME}-bin ${BINARY_NAME})
 set_target_properties(${BINARY_NAME}-bin PROPERTIES OUTPUT_NAME ${BINARY_NAME})
+
+if(BUILD_QT)
+	add_subdirectory(src/platform/qt)
+endif()
