--- a/src/platform/qt/CMakeLists.txt
+++ b/src/platform/qt/CMakeLists.txt
@@ -12,6 +12,7 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 find_package(Qt5Widgets REQUIRED)
+find_package(OpenGL REQUIRED)
 
 set(SOURCE_FILES AudioDevice.cpp Display.cpp GameController.cpp Window.cpp)
 
