--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,9 @@ file(GLOB ARM_SRC ${CMAKE_SOURCE_DIR}/src/arm/*.c)
 file(GLOB GBA_SRC ${CMAKE_SOURCE_DIR}/src/gba/*.c)
 file(GLOB UTIL_SRC ${CMAKE_SOURCE_DIR}/src/util/*.[cS])
 file(GLOB RENDERER_SRC ${CMAKE_SOURCE_DIR}/src/gba/renderers/video-software.c)
+source_group("ARM core" FILES ${ARM_SRC})
+source_group("GBA board" FILES ${GBA_SRC} ${RENDERER_SRC})
+source_group("Utilities" FILES ${UTIL_SRC})
 include_directories(${CMAKE_SOURCE_DIR}/src/arm)
 include_directories(${CMAKE_SOURCE_DIR}/src/gba)
 include_directories(${CMAKE_SOURCE_DIR}/src/debugger)
@@ -18,14 +21,17 @@ include_directories(${CMAKE_SOURCE_DIR}/src/util)
 if(WIN32)
 	add_definitions(-D_WIN32_WINNT=0x0600)
 	file(GLOB OS_SRC ${CMAKE_SOURCE_DIR}/src/platform/windows/*.c)
+	source_group("Windows-specific code" FILES ${OS_SRC})
 else()
 	add_definitions(-DUSE_PTHREADS)
 	set(OS_LIBRARY "${OS_LIBRARY};pthread")
 	file(GLOB OS_SRC ${CMAKE_SOURCE_DIR}/src/platform/posix/*.c)
+	source_group("POSIX-specific code" FILES ${OS_SRC})
 endif()
 
 if(USE_DEBUGGER)
 	file(GLOB DEBUGGER_SRC ${CMAKE_SOURCE_DIR}/src/debugger/*.c)
+	source_group("ARM debugger" FILES ${DEBUGGER_SRC})
 	set(DEBUGGER_LIB "edit")
 	add_definitions(-DUSE_DEBUGGER)
 else()
