--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.6)
 project(GBAc)
 set(BINARY_NAME gbac CACHE INTERNAL "Name of output binaries")
-set(CMAKE_C_FLAGS_DEBUG "-g -Wall -Wextra -Wno-error=type-limits --std=gnu99")
+set(CMAKE_C_FLAGS_DEBUG "-g -Wall -Wextra --std=gnu99")
 set(CMAKE_C_FLAGS_RELEASE "-O3 -Wall -Wextra --std=gnu99")
 set(USE_DEBUGGER ON CACHE BOOL "Whether or not to enable the ARM debugger")
 set(BUILD_SDL ON CACHE BOOL "Build SDL frontend")
