Fix *_LIBRARY into *_LIB

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ if(WIN32)
 	source_group("Windows-specific code" FILES ${OS_SRC})
 else()
 	add_definitions(-DUSE_PTHREADS)
-	set(OS_LIBRARY "${OS_LIBRARY};pthread")
+	set(OS_LIB "${OS_LIB};pthread")
 	file(GLOB OS_SRC ${CMAKE_SOURCE_DIR}/src/platform/posix/*.c)
 	source_group("POSIX-specific code" FILES ${OS_SRC})
 endif()
@@ -49,9 +49,9 @@ endif()
 if(BUILD_PERF)
 	set(PERF_SRC ${CMAKE_SOURCE_DIR}/src/platform/perf-main.c)
 	if(UNIX AND NOT APPLE)
-		set(PERF_LIB "$PERF_LIB};rt")
+		set(PERF_LIB "${PERF_LIB};rt")
 	endif()
 
 	add_executable(${BINARY_NAME}-perf ${PERF_SRC})
-	target_link_libraries(${BINARY_NAME}-perf ${BINARY_NAME} ${PERF_LIBRARY})
+	target_link_libraries(${BINARY_NAME}-perf ${BINARY_NAME} ${PERF_LIB})
 endif()
