Get RPi EGL port building again

--- a/src/platform/sdl/CMakeLists.txt
+++ b/src/platform/sdl/CMakeLists.txt
@@ -18,12 +18,17 @@ file(GLOB PLATFORM_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/sdl-*.c)
 set(PLATFORM_LIBRARY "${SDL_LIBRARY};${SDLMAIN_LIBRARY}")
 include_directories(${CMAKE_SOURCE_DIR}/src/platform/sdl)
 
-if(BUILD_RASPI AND BUILD_EGL)
-	set(MAIN_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/egl-main.c)
-	set(OPENGL_LIBRARY "-lEGL -lGLESv2 -lbcm_host")
-	set(OPENGL_INCLUDE_DIR "")
+if(BUILD_RASPI)
 	add_definitions(-DBUILD_RASPI)
-elseif(BUILD_BBB OR BUILD_RASPI)
+	set(EGL_MAIN_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/egl-main.c)
+	set(EGL_LIBRARY "-lEGL -lGLESv2 -lbcm_host")
+	add_executable(${BINARY_NAME}-rpi ${PLATFORM_SRC} ${EGL_MAIN_SRC})
+	target_link_libraries(${BINARY_NAME}-rpi ${BINARY_NAME} ${PLATFORM_LIBRARY} ${EGL_LIBRARY})
+endif()
+
+if(BUILD_BBB OR BUILD_RASPI)
+	enable_language(ASM)
+	add_definitions(-DCOLOR_16_BIT -DCOLOR_5_6_5)
 	set(MAIN_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/sw-main.c)
 else()
 	set(MAIN_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/gl-main.c)
