Always enable the debugger framework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(GBAc)
 set(BINARY_NAME gbac CACHE INTERNAL "Name of output binaries")
 set(CMAKE_C_FLAGS_DEBUG "-g -Wall -Wextra --std=gnu99")
 set(CMAKE_C_FLAGS_RELEASE "-O3 -Wall -Wextra --std=gnu99")
-set(USE_DEBUGGER ON CACHE BOOL "Whether or not to enable the ARM debugger")
+set(USE_CLI_DEBUGGER ON CACHE BOOL "Whether or not to enable the CLI-mode ARM debugger")
 set(BUILD_SDL ON CACHE BOOL "Build SDL frontend")
 set(BUILD_PERF ON CACHE BOOL "Build performance profiling tool")
 file(GLOB ARM_SRC ${CMAKE_SOURCE_DIR}/src/arm/*.c)
@@ -29,15 +29,15 @@ else()
 	source_group("POSIX-specific code" FILES ${OS_SRC})
 endif()
 
-if(USE_DEBUGGER)
-	file(GLOB DEBUGGER_SRC ${CMAKE_SOURCE_DIR}/src/debugger/*.c)
-	source_group("ARM debugger" FILES ${DEBUGGER_SRC})
+set(DEBUGGER_SRC "${CMAKE_SOURCE_DIR}/src/debugger/debugger.c;${CMAKE_SOURCE_DIR}/src/debugger/memory-debugger.c")
+
+if(USE_CLI_DEBUGGER)
+	set(DEBUGGER_SRC "${DEBUGGER_SRC};${CMAKE_SOURCE_DIR}/src/debugger/cli-debugger.c")
 	set(DEBUGGER_LIB "edit")
-	add_definitions(-DUSE_DEBUGGER)
 else()
-	set(DEBUGGER_SRC "")
 	set(DEBUGGER_LIB "")
 endif()
+source_group("ARM debugger" FILES ${DEBUGGER_SRC})
 
 add_library(${BINARY_NAME} SHARED ${ARM_SRC} ${GBA_SRC} ${DEBUGGER_SRC} ${RENDERER_SRC} ${UTIL_SRC} ${OS_SRC})
 target_link_libraries(${BINARY_NAME} m ${DEBUGGER_LIB} ${OS_LIB})
