Add SDL2 support

--- a/src/platform/sdl/CMakeLists.txt
+++ b/src/platform/sdl/CMakeLists.txt
@@ -1,4 +1,19 @@
-find_package(SDL 1.2 REQUIRED)
+set(SDL_VERSION "2" CACHE STRING "Version of SDL to use (1.2 or 2)")
+
+if (SDL_VERSION EQUAL "2")
+	include(FindPkgConfig)
+	pkg_search_module(SDL2 sdl2)
+	if (SDL2_FOUND)
+		set(SDL_INCLUDE_DIR ${SDL2_INCLUDE_DIRS})
+		set(SDL_LIBRARY ${SDL2_LIBRARIES})
+		set(SDLMAIN_LIBRARY "")
+	endif()
+endif()
+
+if(SDL_VERSION EQUAL "1.2" OR NOT SDL2_FOUND)
+	find_package(SDL 1.2 REQUIRED)
+endif()
+
 file(GLOB PLATFORM_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/sdl-*.c)
 set(PLATFORM_LIBRARY "${SDL_LIBRARY};${SDLMAIN_LIBRARY}")
 include_directories(${CMAKE_SOURCE_DIR}/src/platform/sdl)
