--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ add_library(${BINARY_NAME} SHARED ${ARM_SRC} ${GBA_SRC} ${DEBUGGER_SRC} ${RENDER
 target_link_libraries(${BINARY_NAME} m ${DEBUGGER_LIB} ${OS_LIB})
 
 if(BUILD_SDL)
+	add_definitions(-DBUILD_SDL)
 	add_subdirectory(${CMAKE_SOURCE_DIR}/src/platform/sdl ${CMAKE_BINARY_DIR}/sdl)
 endif()
 
