Move common headers to common.h, remove util and debugger from being first class include directories

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,7 @@ source_group("GBA board" FILES ${GBA_SRC} ${RENDERER_SRC})
 source_group("Utilities" FILES ${UTIL_SRC})
 include_directories(${CMAKE_SOURCE_DIR}/src/arm)
 include_directories(${CMAKE_SOURCE_DIR}/src/gba)
-include_directories(${CMAKE_SOURCE_DIR}/src/debugger)
-include_directories(${CMAKE_SOURCE_DIR}/src/util)
+include_directories(${CMAKE_SOURCE_DIR}/src)
 
 if(WIN32)
 	add_definitions(-D_WIN32_WINNT=0x0600)
