--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,8 @@ set(DEBUGGER_SRC "${CMAKE_SOURCE_DIR}/src/debugger/debugger.c;${CMAKE_SOURCE_DIR
 if(USE_CLI_DEBUGGER AND NOT WIN32)
 	# Win32 doesn't have a usable command line, nor libedit, so this is useless on Windows
 	add_definitions(-DUSE_CLI_DEBUGGER)
-	set(DEBUGGER_SRC "${DEBUGGER_SRC};${CMAKE_SOURCE_DIR}/src/debugger/cli-debugger.c")
+	list(APPEND DEBUGGER_SRC "${CMAKE_SOURCE_DIR}/src/debugger/cli-debugger.c")
+	list(APPEND DEBUGGER_SRC "${CMAKE_SOURCE_DIR}/src/debugger/parser.c")
 	set(DEBUGGER_LIB "edit")
 else()
 	set(DEBUGGER_LIB "")
