--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,7 +75,8 @@ if(USE_CLI_DEBUGGER AND NOT WIN32)
 	add_definitions(-DUSE_CLI_DEBUGGER)
 	list(APPEND DEBUGGER_SRC "${CMAKE_SOURCE_DIR}/src/debugger/cli-debugger.c")
 	list(APPEND DEBUGGER_SRC "${CMAKE_SOURCE_DIR}/src/debugger/parser.c")
-	set(DEBUGGER_LIB "edit")
+	pkg_search_module(EDIT libedit REQUIRED)
+	set(DEBUGGER_LIB ${EDIT_LIBRARIES})
 else()
 	set(DEBUGGER_LIB "")
 endif()
