--- a/src/platform/sdl/CMakeLists.txt
+++ b/src/platform/sdl/CMakeLists.txt
@@ -26,6 +26,7 @@ if(BUILD_RASPI)
 	set(EGL_LIBRARY "-lEGL -lGLESv2 -lbcm_host")
 	add_executable(${BINARY_NAME}-rpi ${PLATFORM_SRC} ${EGL_MAIN_SRC})
 	target_link_libraries(${BINARY_NAME}-rpi ${BINARY_NAME} ${PLATFORM_LIBRARY} ${EGL_LIBRARY})
+	install(TARGETS ${BINARY_NAME}-rpi DESTINATION bin)
 endif()
 
 if(BUILD_BBB OR BUILD_RASPI OR NOT BUILD_GL)
@@ -39,3 +40,4 @@ endif()
 add_executable(${BINARY_NAME}-sdl WIN32 ${PLATFORM_SRC} ${MAIN_SRC})
 target_link_libraries(${BINARY_NAME}-sdl ${BINARY_NAME} ${PLATFORM_LIBRARY} ${OPENGL_LIBRARY})
 set_target_properties(${BINARY_NAME}-sdl PROPERTIES OUTPUT_NAME ${BINARY_NAME})
+install(TARGETS ${BINARY_NAME}-sdl DESTINATION bin)
