Fix embarrassing typos

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,8 +30,8 @@ function(find_feature FEATURE_NAME FEATURE_REQUIRES)
 		find_package(${REQUIRE} QUIET)
 		pkg_search_module(${REQUIRE} ${REQUIRE})
 		if (NOT ${REQUIRE}_FOUND)
-			message(WARNING "Requested module ${REQUIRE} mising for feature {$FEATURE_NAME}. Feature disabled.")
-			set(FEATURE_NAME OFF PARENT_SCOPE)
+			message(WARNING "Requested module ${REQUIRE} missing for feature ${FEATURE_NAME}. Feature disabled.")
+			set(${FEATURE_NAME} OFF PARENT_SCOPE)
 			return()
 		endif()
 	endforeach()
