Fix USE_FFMPEG description: movies record input, videos record output

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -156,7 +156,7 @@ endif()
 message(STATUS "Feature summary:")
 message(STATUS "	CLI debugger: ${USE_CLI_DEBUGGER}")
 message(STATUS "	GDB stub: ${USE_GDB_STUB}")
-message(STATUS "	Movie recording: ${USE_FFMPEG}")
+message(STATUS "	Video recording: ${USE_FFMPEG}")
 message(STATUS "	Screenshot/advanced savestate support: ${USE_PNG}")
 message(STATUS "	ZIP support: ${USE_LIBZIP}")
 message(STATUS "Frontend summary:")
