Don't look for a package when we don't need to

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,9 @@ include_directories(${CMAKE_SOURCE_DIR}/src)
 # Function definitions
 include(FindPkgConfig)
 function(find_feature FEATURE_NAME FEATURE_REQUIRES)
+	if (NOT ${FEATURE_NAME})
+		return()
+	endif()
 	foreach(REQUIRE ${FEATURE_REQUIRES})
 		find_package(${REQUIRE} QUIET)
 		pkg_search_module(${REQUIRE} ${REQUIRE})
