--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,7 +107,9 @@ if(USE_CLI_DEBUGGER)
 	add_definitions(-DUSE_CLI_DEBUGGER)
 	list(APPEND DEBUGGER_SRC ${CMAKE_SOURCE_DIR}/src/debugger/cli-debugger.c)
 	list(APPEND DEBUGGER_SRC ${CMAKE_SOURCE_DIR}/src/debugger/parser.c)
-	set(DEBUGGER_LIB ${EDIT_LIBRARIES})
+	include_directories(AFTER ${LIBEDIT_INCLUDE_DIRS})
+	link_directories(${LIBEDIT_LIBRARY_DIRS})
+	set(DEBUGGER_LIB ${LIBEDIT_LIBRARIES})
 else()
 	set(DEBUGGER_LIB "")
 endif()
