Start of log view

--- a/src/platform/qt/CMakeLists.txt
+++ b/src/platform/qt/CMakeLists.txt
@@ -22,7 +22,16 @@ if(NOT Qt5Widgets_FOUND OR NOT OPENGL_FOUND)
 	return()
 endif()
 
-set(SOURCE_FILES AudioDevice.cpp AudioProcessor.cpp Display.cpp GameController.cpp Window.cpp)
+set(SOURCE_FILES
+	AudioDevice.cpp
+	AudioProcessor.cpp
+	Display.cpp
+	GameController.cpp
+	LogView.cpp
+	Window.cpp)
+
+qt5_wrap_ui(UI_FILES
+	LogView.ui)
 
 if(USE_GDB_STUB)
 	set(SOURCE_FILES ${PLATFORM_SRC} ${SOURCE_FILES} GDBController.cpp GDBWindow.cpp)
@@ -31,7 +40,7 @@ set(MACOSX_BUNDLE_ICON_FILE mgba.icns)
 set(MACOSX_BUNDLE_BUNDLE_VERSION ${LIB_VERSION_STRING})
 set_source_files_properties(${CMAKE_SOURCE_DIR}/res/mgba.icns PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
 
-add_executable(mGBA WIN32 MACOSX_BUNDLE main.cpp ${CMAKE_SOURCE_DIR}/res/mgba.icns ${SOURCE_FILES})
+add_executable(mGBA WIN32 MACOSX_BUNDLE main.cpp ${CMAKE_SOURCE_DIR}/res/mgba.icns ${SOURCE_FILES} ${UI_FILES})
 
 qt5_use_modules(mGBA Widgets Multimedia OpenGL)
 target_link_libraries(mGBA ${PLATFORM_LIBRARY} ${OPENGL_LIBRARY} ${BINARY_NAME} Qt5::Widgets)
