--- a/src/platform/qt/CMakeLists.txt
+++ b/src/platform/qt/CMakeLists.txt
@@ -14,10 +14,12 @@ endif()
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
+find_package(Qt5Multimedia)
+find_package(Qt5OpenGL)
 find_package(Qt5Widgets)
 find_package(OpenGL)
 
-if(NOT Qt5Widgets_FOUND OR NOT OPENGL_FOUND)
+if(NOT Qt5Multimedia_FOUND OR NOT Qt5OpenGL_FOUND OR NOT Qt5Widgets_FOUND OR NOT OPENGL_FOUND)
 	set(BUILD_QT OFF PARENT_SCOPE)
 	return()
 endif()
