Add custom plist.info.in file

--- a/src/platform/qt/CMakeLists.txt
+++ b/src/platform/qt/CMakeLists.txt
@@ -44,11 +44,14 @@ if(USE_GDB_STUB)
 endif()
 set(MACOSX_BUNDLE_ICON_FILE mgba.icns)
 set(MACOSX_BUNDLE_BUNDLE_VERSION ${LIB_VERSION_STRING})
+set(MACOSX_BUNDLE_BUNDLE_NAME ${PROJECT_NAME})
+set(MACOSX_BUNDLE_GUI_IDENTIFIER com.endrift.${BINARY_NAME}-qt)
 set_source_files_properties(${CMAKE_SOURCE_DIR}/res/mgba.icns PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
 
 qt5_add_resources(RESOURCES resources.qrc)
 message(STATUS ${RESOURCES})
 add_executable(mGBA WIN32 MACOSX_BUNDLE main.cpp ${CMAKE_SOURCE_DIR}/res/mgba.icns ${SOURCE_FILES} ${UI_FILES} ${RESOURCES})
+set_target_properties(mGBA PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${CMAKE_SOURCE_DIR}/res/info.plist.in)
 
 qt5_use_modules(mGBA Widgets Multimedia OpenGL)
 target_link_libraries(mGBA ${PLATFORM_LIBRARY} ${OPENGL_LIBRARY} ${BINARY_NAME} Qt5::Widgets)
